Add transition for hidden elements

--- a/day-12-riddle-me-this-interactive/src/index.pug
+++ b/day-12-riddle-me-this-interactive/src/index.pug
@@ -1,13 +1,14 @@
 div.mainQ
   h1 ?
-  button
+  button(onclick="makeVisible()")
   div.arrow > >
   p Push Me!
 
-
-
-div.rightQ
-  p ?
-
-div.leftQ
-  p ?
+div.hiddenDiv(id="hiddenDiv")
+  div.rightQ
+    p.right1 ?
+    p.right2 ?
+    p.right3 ?
+  div.leftQ
+    p.left1 ?
+    p.left2 ?
