--- a/day-12-riddle-me-this-interactive/src/style.css
+++ b/day-12-riddle-me-this-interactive/src/style.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Sedgwick+Ave&display=swap');
 
 body {
-  background-color: white; /*#0e0e14*/
+  background-color: #0e0e14;
   width: 100vw;
   height: 100vh;
+  
+  /* custom properties */
+  --text-shadow: 
+      0 0 7px #9BF89D,
+      0 0 10px #9BF89D,
+      0 0 21px #9BF89D,
+      0 0 42px #52c51d,
+      0 0 82px #52c51d,
+      0 0 92px #52c51d,
+      0 0 102px #52c51d,
+      0 0 151px #52c51d; 
 }
 
 .mainQ {
@@ -14,8 +25,6 @@ body {
   
   width: 400px;
   height: 500px;
-  
-  border: 1px solid white;
 }
 
 h1 {
@@ -28,15 +37,7 @@ h1 {
   font-family: "Comfortaa", sans-serif;
   font-size: 500px;
   
-  text-shadow:
-      0 0 7px #9BF89D,
-      0 0 10px #9BF89D,
-      0 0 21px #9BF89D,
-      0 0 42px #52c51d,
-      0 0 82px #52c51d,
-      0 0 92px #52c51d,
-      0 0 102px #52c51d,
-      0 0 151px #52c51d;  
+  text-shadow: var(--text-shadow);
   animation: pulsate 0.25s ease-in-out infinite alternate; 
 }
 
@@ -55,12 +56,12 @@ button {
 }
 
 button:hover {
-  cursor: pointer; 
+  cursor: help; 
 }
 
-/* Changes button when clicked */
+/* Changes button mouse holds button */
 button:active {
-  background-color: red;
+  background-color: rgba(14, 14, 20, 0.8);
 }
 
 .arrow {
@@ -86,7 +87,90 @@ button:active {
   transform: rotate(-15deg);
 }
 
+.rightQ {
+  position: absolute;
+  top: 45%;
+  left: 85%;
+  transform: translate(-50%, -50%);
+  
+  width: 250px;
+  height: 500px;
+}
 
+.rightQ p {
+  position: relative;
+    
+  color: #d2fad3;
+  font-family: "Comfortaa", sans-serif;
+  text-shadow: var(--text-shadow);
+}
+
+.rightQ .right1 {
+  font-size: 200px;
+  margin-top: 10%;
+  margin-left: 10%;
+  transform: rotate(50deg);
+}
+
+.rightQ .right2 {
+  font-size: 95px;
+  margin-top: -110%;
+  margin-left: 30%;
+  transform: rotate(300deg); 
+}
+
+.rightQ .right3 {
+  font-size: 130px;
+  margin-top: 60%;
+  margin-left: 10%;
+  transform: rotate(15deg); 
+}
+
+.hiddenDiv {
+  opacity: 0;
+}
+
+.leftQ {
+
+  position: absolute;
+  top: 45%;
+  left: 15%;
+  transform: translate(-50%, -50%);
+  
+  width: 250px;
+  height: 500px;
+
+}
+
+.leftQ p {
+  position: relative;
+  color: #d2fad3;
+  font-family: "Comfortaa", sans-serif;
+  text-shadow: var(--text-shadow);
+}
+
+.leftQ .left1 {
+  font-size: 230px;
+  margin-top: 1%;
+  margin-left: 35%;
+  transform: rotate(-35deg);
+}
+
+.leftQ .left2 {
+  font-size: 150px;
+  margin-top: -75%;
+  margin-left: 50%;  
+  transform: rotate(30deg);
+}
+
+  @keyframes msgSuccess {
+  50%  {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+
+
+/* Note: NO CLASSES UNDER @KEYFRAMES */
 /* animates big Q */
 @keyframes pulsate {
     
@@ -113,4 +197,3 @@ button:active {
     0 0 94px #52c51d,
     0 0 140px #52c51d;
 }
-  
